[gd_scene load_steps=7 format=3 uid="uid://b7qxvwqxvwqxv"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/grid_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/grid_overlay.gd" id="3"]
[ext_resource type="Script" path="res://scripts/game_world.gd" id="4"]
[ext_resource type="Script" path="res://scripts/ghost_preview.gd" id="5"]
[ext_resource type="Script" path="res://scripts/ui/toolbar.gd" id="6"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 3840.0
offset_bottom = 2240.0
mouse_filter = 2
color = Color(0.18, 0.16, 0.22, 1)

[node name="GameWorld" type="Node2D" parent="."]
script = ExtResource("4")

[node name="GridOverlay" type="Node2D" parent="GameWorld"]
script = ExtResource("3")

[node name="GridManager" type="Node2D" parent="GameWorld"]
script = ExtResource("2")

[node name="MachineContainer" type="Node2D" parent="GameWorld"]
z_index = 1

[node name="ItemContainer" type="Node2D" parent="GameWorld"]
z_index = 2

[node name="EffectsContainer" type="Node2D" parent="GameWorld"]
z_index = 4

[node name="GhostPreview" type="Node2D" parent="GameWorld"]
z_index = 5
script = ExtResource("5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Toolbar" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6")
